<resources>
    <string name="app_name">SaludApp</string>
    <string name="profile_icon_description">Ícono de perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="parati">Para ti</string>
    <string name="desafios">Desafios</string>
    <string name="habitos">Habitos</string>
    <string name="noticias">Noticias</string>
    <string name="imc">IMC Calculadora</string>
    <string name="bienvenido">Hola Usuario</string>
    <string name="habitos_propuestos">Hábitos Propuestos</string>
    <string name="fecha">Jueves 12 de septiembre, 2024</string>
    <string name="progress_percentage">50%</string>
    <string name="habitos_completados">5 de 10 hábitos habilitados</string>
    <string name="descripcion_habito">Descripción del Hábito</string>
    <string name="no_habitos">No hay hábitos</string>
    <string name="calificación">Calificación Actual</string>
    <string name="peso_calificacion">-----</string>
    <string name="calcula_imc">Calcula tu IMC</string>
    <string name="altura">Altura en cm</string>
    <string name="peso">Peso en kg</string>
    <string name="calcular">Calcular</string>
    <string name="info_imc">Tu IMC puede ser una medida inicial útil para identificar tu clasificación de peso y tus factores de riesgo de obesidad. </string>
    <string name="title_noticias">Recuerda que puedes acceder a mas información oprimiendo Ver Mas</string>
    <string name="articulos">Artículos</string>
    <string name="text">Ver mas</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="icon_desc">Icon Description</string>
    <string name="image_desc">Image Description</string>
    <string name="title_articulos">Artículos</string>
    <string name="delete_icon_description">Elimar Resultado del Historial</string>
    <string name="Sellos_Negros">Sellos Negros</string>
    <string name="default_web_client_id">576294934676-bif3cqkkjik9p5h7ros5eg4d1ofefula.apps.googleusercontent.com</string>

    <string name="habitos_nuevos">Nuevos Hábitos</string>
    <string name="nombre_habito">Nombre del Hábito</string>
    <string name="close_icon">Cerrar</string>
    <string name="tiempo">Tiempo</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="guardar_habito">Guardar Hábito</string>

    <!-- Time options -->
    <string-array name="tiempo_options">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>Personalizado</item>
    </string-array>

    <!-- Frequency options -->
    <string-array name="frecuencia_options">
        <item>Diario</item>
        <item>Semanal</item>
        <item>Quincenal</item>
        <item>Mensual</item>
        <item>Personalizado</item>
    </string-array>

</resources>