<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".noticias">

    <TextView
        android:id="@+id/titleNoticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_noticias"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
    android:scrollHorizontally="false"
    android:maxLines="2"
    android:ellipsize="end" />

    <TextView
        android:id="@+id/Noticias_subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
    android:fontFamily="@font/montserrat"
    android:text="@string/noticias"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:maxLines="2"
    android:ellipsize="end" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNoticias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/Articulos_subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/articulos"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
    android:maxLines="2"
    android:ellipsize="end" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerArticulos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />

</LinearLayout>
