<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".habitos">

    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/fecha" />

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/bienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fecha"
        />

    <FrameLayout
        android:id="@+id/rectangulo"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:background="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/bienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circular_progress"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:indicatorColor="@color/color_when_not_empty"                app:indicatorSize="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackColor="#C1FAFE"
                app:trackThickness="7dp" />

            <TextView
                android:id="@+id/progress_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_percentage"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/circular_progress"
                app:layout_constraintStart_toStartOf="@id/circular_progress"
                app:layout_constraintEnd_toEndOf="@id/circular_progress"
                app:layout_constraintTop_toTopOf="@id/circular_progress"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.5"/>

            <TextView
                android:id="@+id/habitos_completados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habitos_completados"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/circular_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toEndOf="@id/circular_progress"
                app:layout_constraintTop_toTopOf="@id/circular_progress"
                app:layout_constraintVertical_bias="0.459" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/habitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/habitos_propuestos"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/rectangulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="370sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/habitos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="25dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="+"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
